@@ -70,8 +70,7 @@ GList *twitux_network_get_followers	(void);
 /* Get an image from servers */
 void twitux_network_get_image (const gchar *url_image,
 			      			   const gchar *username,
-							   GtkTreeIter iter,
-							   GtkListStore *store);
+							   GtkTreeIter iter);
 
 /* Add a user to follow */
 void twitux_network_add_user		(const gchar *username);
