@@ -1,3 +1,10 @@
+2007-10-05  Daniel Morales  <daniminas@gmail.com>
+
+	* data/main.glade:
+	* src/twitux-app.[ch]:
+	* src/twitux-network.[ch]:
+	* src/twitux-parser.[ch]: Switch from TreeView to TwituxTweetList.
+
 2007-09-16  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* src/twitux-tweet-list.[ch]: create separate listview object.
